--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,8 @@ hs_err_pid*
 .idea/compiler.xml
 .idea/jarRepositories.xml
 .idea/modules.xml
+.idea/jpa-buddy.xml
+.idea/statistic.xml
 .idea/*.iml
 .idea/modules
 *.iml
