Added simple HttpClient
Used for making HttpRequests. Quite general in nature, as we aim to use
it for both GHS, GitHub and Gerrit. Some methods will however have to
be specific, as APIs may contain differences in JSONs of responses.

--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -39,6 +39,16 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client</artifactId>
+      <version>1.41.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.github.javaparser</groupId>
       <artifactId>javaparser-core</artifactId>
       <version>3.24.0</version>
