Added `exec` plugin for `crawler` module

--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -54,4 +54,24 @@
       <version>3.24.0</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>usi.si.seart.Crawler</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
