--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>4.7.1</version>
+    </dependency>
   </dependencies>
 
   <build>
