Increased stack size to 16mb via VM parameter

--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -74,6 +74,9 @@
           </execution>
         </executions>
         <configuration>
+          <arguments>
+            <argument>-Xss16m</argument>
+          </arguments>
           <mainClass>${app.mainClass}</mainClass>
         </configuration>
       </plugin>
