--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 app.general.tmpDirPrefix=dl4se
 app.crawl.startDate=2008-01-01
-app.crawl.ghs.searchUrl=http://localhost:8080/api/r/search
+app.crawl.ghs.searchUrl=${CODE_SEARCH_URL}
