--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
           <version>3.0.0-M5</version>
         </plugin>
         <plugin>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.2.4</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.2.2</version>
         </plugin>
