Added liquibase service to `docker-compose.yml`
I personally consider this better than app-level migrations.
The next commit will remove those, as well as add a command demonstrating
how to perform migrations locally.

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -14,5 +14,15 @@ services:
     ports:
       - ${DATABASE_PORT}:${DATABASE_PORT}
 
+  dl4se-liquibase:
+    container_name: dl4se-liquibase
+    image: liquibase/liquibase:4.8
+    command: --url=jdbc:postgresql://dl4se-db:${DATABASE_PORT}/${DATABASE_NAME}?user=${DATABASE_USER}&password=${DATABASE_PASS} --changeLogFile=changelog.xml update
+    volumes:
+      - ../liquibase/changelog.xml:/liquibase/changelog.xml
+      - ../liquibase/scripts/:/liquibase/scripts/
+    networks: [dl4se-network]
+    depends_on: [dl4se-db]
+
 networks:
   dl4se-network:
