Added waiting mechanism for crawler service
Now dl4se-crawler blocks until the dl4se-liquibase service has finished
executing. The waiting mechanism is simply based on pings to the liquibase
container. When it becomes unreachable, we can assume that it has finished
running, and that the crawler can start doing its thing.

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       dockerfile: deployment/crawler/Dockerfile
     networks: [dl4se-network]
     environment:
+      LIQUIBASE_HOST: dl4se-liquibase
       DATABASE_HOST: dl4se-db
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_NAME: ${DATABASE_NAME}
