--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASS}
     ports:
       - ${DATABASE_PORT}:${DATABASE_PORT}
+    healthcheck:
+      test: pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}
+      start_period: 5s
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   dl4se-liquibase:
     container_name: dl4se-liquibase
@@ -22,7 +28,9 @@ services:
       - ../liquibase/changelog.xml:/liquibase/changelog.xml
       - ../liquibase/scripts/:/liquibase/scripts/
     networks: [dl4se-network]
-    depends_on: [dl4se-db]
+    depends_on:
+      dl4se-db:
+        condition: service_healthy
 
   dl4se-crawler:
     container_name: dl4se-crawler
