Removing the wait-service-exit script
Since the condition option works in depends_on, we can use
service_completed_successfully to wait for dl4se-liquibase to finish
before starting the dl4se-crawler service. The script was originally
created because I believed this functionality was unavailable to me.
From now on, check the correctness of the compose file using:
docker-compose config

--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -12,10 +12,7 @@ COPY --from=build /dl4se-crawler/target/dl4se-crawler-*.jar /crawler.jar
 
 RUN apk update && apk add git
 
-COPY ../../deployment/scripts/wait-service-exit.sh /wait.sh
-RUN chmod +x /wait.sh
-
-ENTRYPOINT /wait.sh $LIQUIBASE_HOST && java \
+ENTRYPOINT java \
     -DDATABASE_HOST=$DATABASE_HOST \
     -DDATABASE_NAME=$DATABASE_NAME \
     -DDATABASE_PASS=$DATABASE_PASS \
