--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -34,10 +34,7 @@ services:
 
   dl4se-crawler:
     container_name: dl4se-crawler
-    image: dl4se/dl4se-crawler
-    build:
-      context: ../
-      dockerfile: deployment/crawler/Dockerfile
+    image: dl4se/dl4se-crawler:latest
     networks: [dl4se-network]
     environment:
       LIQUIBASE_HOST: dl4se-liquibase
