Restoring removed `build` property
I'm keeping build.sh for the sake of testing image building locally.
A conversation with Emad today revealed that he prefers the old way of
building images.

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -33,6 +33,9 @@ services:
   dl4se-crawler:
     container_name: dl4se-crawler
     image: dl4se/dl4se-crawler:latest
+    build:
+      context: ../
+      dockerfile: deployment/crawler/Dockerfile
     networks: [dl4se-network]
     environment:
       LIQUIBASE_HOST: dl4se-liquibase
