Logs are now persisted in between runs through a dedicated volume
`dl4se-logs-crawler` now binds the `/logs` directory in the service.
This way, none of the old logs get deleted. In fact, by restarting the
service we keep appending to the existing logs.

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASS: ${DATABASE_PASS}
       CODE_SEARCH_URL: http://gym.si.usi.ch:48001/api/r/search
+    volumes:
+      - logs-crawler:/logs
     depends_on:
       dl4se-liquibase:
         condition: service_completed_successfully
@@ -58,6 +60,8 @@ services:
 volumes:
   data:
     name: dl4se-data
+  logs-crawler:
+    name: dl4se-logs-crawler
 
 networks:
   default:
