Parametrized platform port

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Configuration
 server.servlet.context-path=/api
-server.port=8080
+server.port=${PLATFORM_PORT:8080}
 
 # Logging Configuration
 logging.level.usi.si.seart=INFO
