Added simple `EmailService` to the platform

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 server.servlet.context-path=/api
 server.port=${PLATFORM_PORT:8080}
 
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${PLATFORM_MAIL_ADDR}
+spring.mail.password=${PLATFORM_MAIL_PASS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Logging Configuration
 logging.level.usi.si.seart=INFO
 
