--- a/dl4se-platform/pom.xml
+++ b/dl4se-platform/pom.xml
@@ -35,6 +35,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <version>${springframework.version}</version>
       <scope>test</scope>
