--- a/dl4se-platform/pom.xml
+++ b/dl4se-platform/pom.xml
@@ -69,6 +69,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>usi.si.seart.DL4SEApplication</mainClass>
+        </configuration>
         <executions>
           <execution>
             <goals>
