Substituting HTTP for HTTPS

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 server.servlet.context-path=/api
 server.port=${PLATFORM_PORT:8080}
 
+# SSL Configuration
+server.ssl.enabled=true
+server.ssl.key-store=classpath:dl4se.p12
+server.ssl.key-store-type=pkcs12
+server.ssl.key-store-password=${KEYSTORE_PASS}
+server.ssl.key-alias=dl4se
+server.ssl.key-password=${KEYSTORE_PASS}
+
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
