Parametrized the default user for Spring security

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -18,6 +18,11 @@ spring.mail.password=${PLATFORM_MAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Security Configuration
+spring.security.user.name=${SECURITY_USER}
+spring.security.user.password=${SECURITY_PASS}
+spring.security.user.roles=admin
+
 # Logging Configuration
 logging.level.usi.si.seart=INFO
 
