--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASS}
+    restart: always
     healthcheck:
       test: pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}
       start_period: 5s
