--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -35,10 +35,9 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 
 # JPA Debugging Configuration
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-## printing parameter values in order
-#logging.level.org.hibernate.type.descriptor.sql=TRACE
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.type.descriptor.sql=OFF
 
 # Spring Datasource Configuration
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
