--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.servlet.context-path=/api
 server.port=${PLATFORM_PORT:8080}
 
+# Banner Configuration
+spring.banner.location=classpath:banner.txt
+
 # SSL Configuration
 server.ssl.enabled=true
 server.ssl.key-store=classpath:dl4se.p12
