Added query logging for JPA
Disabled by default, but overridden in a run configuration

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -40,6 +40,7 @@ spring.jpa.hibernate.ddl-auto=none
 # JPA Debugging Configuration
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.SQL=OFF
 logging.level.org.hibernate.type.descriptor.sql=OFF
 
 # Spring Datasource Configuration
