--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -51,3 +51,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Application Configuration
 app.jwt.secret=${JWT_SECRET}
+app.request.limit=3
