Added jooq to dependency list

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.security.user.roles=admin
 
 # Logging Configuration
 logging.level.usi.si.seart=INFO
+logging.level.org.jooq.Constants=WARN
 
 # Hibernate Configuration
 hibernate.types.print.banner=false
