Small changes to hibernate configuration

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -30,13 +30,12 @@ spring.security.user.roles=admin
 logging.level.usi.si.seart=INFO
 logging.level.org.jooq.Constants=WARN
 
-# Hibernate Configuration
-hibernate.types.print.banner=false
-
 # JPA Configuration
 spring.jpa.database=postgresql
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.types.print.banner=false
+spring.jpa.properties.hibernate.jdbc.fetch_size=500
 
 # JPA Debugging Configuration
 spring.jpa.show-sql=false
