Some debugging changes

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -38,10 +38,9 @@ spring.jpa.properties.hibernate.types.print.banner=false
 spring.jpa.properties.hibernate.jdbc.fetch_size=500
 
 # JPA Debugging Configuration
-spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.type.descriptor.sql=OFF
+logging.file.name=
 
 # Spring Datasource Configuration
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
