Removed `app` prefix from JWT setting in `application.properties`

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -48,7 +48,9 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+
 # Application Configuration
-app.jwt.secret=${JWT_SECRET}
 app.request.limit=3
 app.page.size=20
