Replacing hard-coded application.properties with `ConfigurationService`

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -52,5 +52,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 jwt.secret=${JWT_SECRET}
 
 # Application Configuration
-app.request.limit=3
-app.page.size=20
+environment.name=dl4seEnvironment
