Added Spring Boot Actuators
Available only via authorized requests to the admins. Only the following
are currently supported:
1) health (with details and components)
2) logfile
3) metrics

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -5,6 +5,11 @@ server.port=${PLATFORM_PORT:8080}
 # Banner Configuration
 spring.banner.location=classpath:banner.txt
 
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,logfile,metrics
+management.endpoint.health.show-details=when_authorized
+management.endpoint.health.show-components=when_authorized
+
 # SSL Configuration
 server.ssl.enabled=true
 server.ssl.key-store=classpath:dl4se.p12
