Mail server availability now tested on startup

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -19,6 +19,7 @@ server.ssl.key-alias=dl4se
 server.ssl.key-password=${KEYSTORE_PASS}
 
 # Mail Configuration
+spring.mail.test-connection=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${PLATFORM_MAIL_ADDR}
