--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -46,7 +46,10 @@ spring.jpa.properties.hibernate.jdbc.fetch_size=500
 # JPA Debugging Configuration
 spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=OFF
-logging.file.name=
+logging.file.name=logs/platform.log
+logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}_%d{yyyy-MM-dd}_%i.log.gz
+logging.logback.rollingpolicy.max-file-size=100MB
+logging.logback.rollingpolicy.max-history=180
 
 # Spring Datasource Configuration
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
