Endpoint enablement is now opt-in rather than opt-out
This means that all the other actuators are disabled by default, until
we decide to explicitly enable them.

--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.port=${PLATFORM_PORT:8080}
 spring.banner.location=classpath:banner.txt
 
 # Actuator Configuration
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+management.endpoint.logfile.enabled=true
+management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=health,logfile,metrics
 management.endpoint.health.show-details=when_authorized
 management.endpoint.health.show-components=when_authorized
