--- a/dl4se-platform/src/main/resources/application.properties
+++ b/dl4se-platform/src/main/resources/application.properties
@@ -61,5 +61,9 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+frontend.host=${FRONTEND_HOST:localhost}
+frontend.port=${FRONTEND_PORT:3000}
+frontend.url=http://${FRONTEND_URL:${frontend.host}:${frontend.port}}
+
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
