--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -29,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.51.0",
+    "sass-loader": "^13.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
