Replacing `sleep` string param with equivalent time in seconds
Let's try this and see if it works

--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -23,7 +23,7 @@ java -DDATABASE_HOST=$DATABASE_HOST \
      -jar crawler.jar ;\
 EXIT_CODE=$? ;\
 if [[ $EXIT_CODE == 0 ]] ;\
-then sleep 6h ;\
+then sleep 21600 ;\
 else exit $EXIT_CODE ;\
 fi ;\
 done
