--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.51.0",
     "sass-loader": "^13.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "streamsaver": "^2.0.6",
+    "vue-template-compiler": "^2.6.14",
+    "web-streams-polyfill": "^3.2.1"
   }
 }
