--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.0",
+    "@vuelidate/core": "^2.0.0-alpha.42",
+    "@vuelidate/validators": "^2.0.0-alpha.30",
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "streamsaver": "^2.0.6",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-fragment": "^1.6.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "vuex-persist": "^3.1.3",
+    "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -27,17 +36,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/composition-api": "^1.6.2",
-    "@vuelidate/core": "^2.0.0-alpha.41",
-    "@vuelidate/validators": "^2.0.0-alpha.29",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "lodash": "^4.17.21",
-    "sass": "^1.51.0",
-    "sass-loader": "^13.0.0",
-    "streamsaver": "^2.0.6",
-    "vue-fragment": "^1.6.0",
-    "vue-template-compiler": "^2.6.14",
-    "web-streams-polyfill": "^3.2.1"
+    "vue-template-compiler": "^2.6.14"
   }
 }
