--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -38,6 +38,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-lorem-ipsum": "^0.0.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
