--- a/dl4se-platform/pom.xml
+++ b/dl4se-platform/pom.xml
@@ -46,6 +46,11 @@
       <version>1.2.3</version>
     </dependency>
     <dependency>
+      <groupId>com.github.javaparser</groupId>
+      <artifactId>javaparser-core</artifactId>
+      <version>3.24.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
