Added Michaele's src2abs, which we will be appropriated to our needs

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>dl4se-crawler</module>
     <module>dl4se-model</module>
     <module>dl4se-platform</module>
+    <module>dl4se-src2abs</module>
   </modules>
 
   <dependencies>
