Added `src2abs` to the list of `platform` dependencies

--- a/dl4se-platform/pom.xml
+++ b/dl4se-platform/pom.xml
@@ -36,6 +36,11 @@
       <version>0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>usi.si.seart</groupId>
+      <artifactId>dl4se-src2abs</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
