--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <modules>
     <module>dl4se-crawler</module>
     <module>dl4se-model</module>
-    <module>dl4se-platform</module>
+    <module>dl4se-server</module>
     <module>dl4se-src2abs</module>
   </modules>
 
