Prefixed and renamed some environment variables for added clarity

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Configuration
 server.servlet.context-path=/api
-server.port=${PLATFORM_PORT:8080}
+server.port=${SERVER_PORT:8080}
 
 # Banner Configuration
 spring.banner.location=classpath:banner.txt
@@ -26,14 +26,14 @@ server.ssl.key-password=${KEYSTORE_PASS}
 spring.mail.test-connection=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${PLATFORM_MAIL_ADDR}
-spring.mail.password=${PLATFORM_MAIL_PASS}
+spring.mail.username=${SERVER_MAIL_ADDR}
+spring.mail.password=${SERVER_MAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Security Configuration
-spring.security.user.name=${SECURITY_USER}
-spring.security.user.password=${SECURITY_PASS}
+spring.security.user.name=${SERVER_SECURITY_USER}
+spring.security.user.password=${SERVER_SECURITY_PASS}
 spring.security.user.roles=admin
 
 # Logging Configuration
@@ -61,9 +61,9 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-frontend.host=${FRONTEND_HOST:localhost}
-frontend.port=${FRONTEND_PORT:3000}
-frontend.url=http://${FRONTEND_URL:${frontend.host}:${frontend.port}}
+website.host=${WEBSITE_HOST:localhost}
+website.port=${WEBSITE_PORT:3000}
+website.url=${WEBSITE_URL:http://${website.host}:${website.port}}
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET}
+jwt.secret=${SERVER_JWT_SECRET}
