--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -58,11 +58,47 @@ services:
         condition: on-failure
         max_attempts: 3
 
+  dl4se-server:
+    container_name: dl4se-server
+    image: dl4se/dl4se-server:latest
+    build:
+      context: ../
+      dockerfile: deployment/server/Dockerfile
+    networks: [ default ]
+    environment:
+      DATABASE_HOST: dl4se-db
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_PASS: ${DATABASE_PASS}
+      SERVER_PORT: ${SERVER_PORT}
+      SERVER_MAIL_ADDR: ${SERVER_MAIL_ADDR}
+      SERVER_MAIL_PASS: ${SERVER_MAIL_PASS}
+      SERVER_SECURITY_USER: ${SERVER_SECURITY_USER}
+      SERVER_SECURITY_PASS: ${SERVER_SECURITY_PASS}
+      SERVER_JWT_SECRET: ${SERVER_JWT_SECRET}
+      KEYSTORE_PASS: ${KEYSTORE_PASS}
+      WEBSITE_URL: ${WEBSITE_URL}
+    volumes:
+      - logs-server:/logs
+      - tmp-server:/tmp
+    depends_on:
+      dl4se-liquibase:
+        condition: service_completed_successfully
+    deploy:
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
+
 volumes:
   data:
     name: dl4se-data
   logs-crawler:
     name: dl4se-logs-crawler
+  logs-server:
+    name: dl4se-logs-server
+  tmp-server:
+    name: dl4se-tmp-server
 
 networks:
   default:
