Added `dl4se-website` service to compose, along with custom image def

--- a/deployment/.env
+++ b/deployment/.env
@@ -5,6 +5,8 @@ DATABASE_USER=dl4se_admin
 DATABASE_PASS=Lugano2022
 DATABASE_PORT=5432
 
+WEBSITE_PORT=3000
+
 SERVER_PORT=8080
 SERVER_MAIL_ADDR=dl4se.project@gmail.com
 SERVER_MAIL_PASS=nyydpxucupzfdjvf
