--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -98,6 +98,23 @@ services:
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
 
+  dl4se-website:
+    container_name: dl4se-website
+    image: dl4se/dl4se-website:latest
+    build:
+      context: ../
+      dockerfile: deployment/website/Dockerfile
+      args:
+        WEBSITE_PORT: ${WEBSITE_PORT}
+        SERVER_URL: https://localhost:${SERVER_PORT}/api
+    networks: [ default ]
+    restart: always
+    depends_on:
+      dl4se-server:
+        condition: service_healthy
+    ports:
+      - "${WEBSITE_PORT}:80"
+
 volumes:
   data:
     name: dl4se-data
