Separated `dl4se-crawler` ENTRYPOINT into its own script

--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -11,19 +11,9 @@ FROM adoptopenjdk/openjdk11:jre-11.0.11_9-alpine
 
 COPY --from=build /dl4se-crawler/target/dl4se-crawler-*.jar /crawler.jar
 
+COPY ./deployment/crawler/entrypoint.sh ./
+RUN chmod 777 ./entrypoint.sh
+
 RUN apk update && apk add git
 
-ENTRYPOINT while : ; do \
-java -DDATABASE_HOST=$DATABASE_HOST \
-     -DDATABASE_NAME=$DATABASE_NAME \
-     -DDATABASE_PASS=$DATABASE_PASS \
-     -DDATABASE_PORT=$DATABASE_PORT \
-     -DDATABASE_USER=$DATABASE_USER \
-     -Dfile.encoding=UTF-8 \
-     -jar crawler.jar ;\
-EXIT_CODE=$? ;\
-if [[ $EXIT_CODE == 0 ]] ;\
-then sleep 21600 ;\
-else exit $EXIT_CODE ;\
-fi ;\
-done
+ENTRYPOINT ["/entrypoint.sh"]
