Enabled `shutdown` and `restart` actuators in the application settings

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.banner.location=classpath:banner.txt
 management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
 management.endpoint.logfile.enabled=true
-management.endpoint.metrics.enabled=true
-management.endpoints.web.exposure.include=health,logfile,metrics
+management.endpoint.shutdown.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoints.web.exposure.include=health,logfile,metrics,shutdown,restart
 management.endpoint.health.show-details=when_authorized
 management.endpoint.health.show-components=when_authorized
 
