--- a/dl4se-model/pom.xml
+++ b/dl4se-model/pom.xml
@@ -45,9 +45,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.glassfish.web</groupId>
+      <groupId>org.glassfish</groupId>
       <artifactId>javax.el</artifactId>
-      <version>2.2.6</version>
+      <version>3.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
