Added flag to image builds to suppress display of download progress

--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -6,7 +6,7 @@ COPY ./dl4se-model /dl4se-model
 COPY ./dl4se-server /dl4se-server
 COPY ./dl4se-src2abs /dl4se-src2abs
 
-RUN mvn -e -f pom.xml clean package -pl dl4se-crawler -am -DskipTests
+RUN mvn -e --no-transfer-progress clean package -pl dl4se-crawler -am -DskipTests
 
 FROM adoptopenjdk/openjdk11:jre-11.0.11_9-alpine
 
